--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     # Avoid duplicated CI runs for internal PRs
@@ -12,13 +13,23 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up pnpm
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7
+    - name: Use Node.js ${{ matrix.node-version }}
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Configure
-        run: npm ci
+        run: pnpm install
       - name: Test
-        run: npm test
+        run: pnpm test
       - name: Build
-        run: npm run build
+        run: pnpm run build
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
