--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: false
     # Avoid duplicated CI runs for internal PRs
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     steps:
