--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "test": "jest --watch",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "eject": "craco eject",
     "clean": "gts clean",
     "compile": "tsc",
     "lint": "gts lint",
     "fix": "gts fix",
-    "prepare": "npm.cmd run compile",
-    "pretest": "npm.cmd run compile",
-    "posttest": "npm.cmd run lint"
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
   },
   "browserslist": {
     "production": [
