--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/facebook-js-sdk": "^3.3.6",
     "@types/jest": "^29.4.0",
+    "craco-plugin-env": "^1.0.5",
     "cross-env": "^7.0.3",
     "eslint-plugin-mui-path-imports": "^0.0.14",
     "gts": "^3.1.1",
