--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
       "@app/components/*": ["components/*"],
       "@app/layouts/*": ["layouts/*"],
+      "@app/model/*": ["model/*"],
       "@app/pages/*": ["pages/*"],
       "@app/utils/*": ["utils/*"]
     }
