--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@app/components/*": ["components/*"],
       "@app/layouts/*": ["layouts/*"],
+      "@app/model/*": ["model/*"],
       "@app/pages/*": ["pages/*"],
       "@app/utils/*": ["utils/*"]
     },
