--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.organization=lajoscseppento
 #sonar.sources=.
 
 sonar.sourceEncoding=UTF-8
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
