--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 # https://www.davidlaing.com/2012/09/19/customise-your-gitattributes-to-become-a-git-ninja/
 *          text=auto
 gradlew    text eol=lf
+*.mp4 filter=lfs diff=lfs merge=lfs -text
 
 #
 # The above will handle all files NOT found below
