--- a/package.json
+++ b/package.json
@@ -1,64 +1,50 @@
 {
   "name": "bravo-yankee",
-  "version": "0.3.1",
+  "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "jest --coverage",
     "test-watch": "jest --watch",
-    "eject": "craco eject",
     "clean": "gts clean",
     "compile": "tsc",
     "lint": "gts lint",
-    "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run lint"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "fix": "gts fix"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.2.2",
-    "web-vitals": "^3.4.0"
+    "react-error-boundary": "^4.0.13",
+    "react-router-dom": "^6.22.3",
+    "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/facebook-js-sdk": "^3.3.7",
-    "@types/jest": "^29.5.5",
-    "craco-plugin-env": "^1.0.5",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/facebook-js-sdk": "^3.3.10",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
     "cross-env": "^7.0.3",
     "eslint-plugin-mui-path-imports": "^0.0.15",
-    "gts": "^5.0.1",
+    "eslint-plugin-react": "^7.34.0",
+    "gts": "^5.2.0",
     "jest": "^29.7.0",
-    "react-app-alias": "^2.2.2",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.2",
+    "vite": "^5.1.5",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
