--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Set up pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: latest
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          cache: 'pnpm'
           node-version: 20
+          cache: 'pnpm'
       - name: Build
         run: pnpm install && pnpm build
       - uses: FirebaseExtended/action-hosting-deploy@v0
